--- a/main.html
+++ b/main.html
@@ -7,6 +7,25 @@
 
   <body>
     <!-- the entire body must be written by student -->
+	  <div class="container">
+		 <nav class="side-bar">
+			 Nav
+		 </nav>
+		  <main class="content">
+	           <header>     
+			  Header
+		  </header>
+			  <section class="article">
+				  Article
+			  </section>
+	       <aside class="aside">
+			   Aside
+		   </aside>
+			  <footer>
+				  Footer
+			  </footer>
+		  </main>
+	  </div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
