--- a/main.html
+++ b/main.html
@@ -8,24 +8,16 @@
   <body>
     <!-- the entire body must be written by student -->
 	  <div class="container">
-		 <nav class="side-bar">
-			 Nav
-		 </nav>
-		  <main class="content">
-	           <header>     
-			  Header
-		  </header>
-			  <section class="article">
-				  Article
-			  </section>
-	       <aside class="aside">
-			   Aside
-		   </aside>
-			  <footer>
-				  Footer
-			  </footer>
-		  </main>
-	  </div>
+        <nav class="navbar">Navigation</nav>
+        <main class="content">
+            <header class="header">Header</header>
+            <section class="main-content">
+                <article class="article">Article</article>
+                <aside class="aside">Aside</aside>
+            </section>
+            <footer class="footer">Footer</footer>
+        </main>
+    </div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
